tests/NormalTests/paczka2/big_fuzzy/98175392.err
Error in line 5: MTtsYhC8n0f S664 59,0
Error in line 26: S664 A217 9,8
Error in line 57: 54Q A564 57,0
Error in line 61: 54Q A410 69,2
Error in line 68: UAOg9KQsfy A410 13,2
Error in line 72: S664 S664 38,3
Error in line 86: UAOg9KQsfy A217 55,2
Error in line 83: MTtsYhC8n0f A410 82,5
Error in line 88: UAOg9KQsfy S664 35,5
Error in line 94: MTtsYhC8n0f S664 81,5
Error in line 89: MAU4sIOs A217 78,6
Error in line 116: JrFZ S664 46,1
Error in line 135: MTtsYhC8n0f A217 }4,8
Error in line 143: 54Q S664 16,
Error in line 139: S664 S664 76,4
Error in line 138: MTtsYhC8n0f A217 155,2
Error in line 151: MTtsYhC8n0f S664 20,6
Error in line 153: MTtsYhC8n0f A217 32,9
Error in line 161: S664 S664 31,4
Error in line 171: MTtsYhC8n0f A217 98,3
Error in line 205: 54Q A217 24,65
Error in line 213: 54Q A564 17,7
Error in line 225: S664 A564 36,68
Error in line 224: S664 A564 68,2
Error in line 223: MAU4sIOs A410 6,0
Error in line 232: MAU4sIOs A217 91,4
Error in line 236: UAOg9KQsfy S664 89,4
